# fiesta-tire-temp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
docs/superpowers/plans/: 2026-06-25-mlx90640-integration-plan.md  2026-06-26-tire-segmentation.md
docs/superpowers/specs/: 2026-06-25-mlx90640-integration-design.md  2026-06-26-tire-segmentation-design.md
main/: CMakeLists.txt  idf_component.yml  main.c  mlx90614.c  mlx90614.h  mlx90640.c  mlx90640.h  mqttcomm.c  mqttcomm.h  tire_segment.c  tire_segment.h  tire_temp.c  tire_temp.h  wlan.c  wlan.h
profiles/: fl.sh  fr.sh  rl.sh  rr.sh
